--- a/_includes/header.html
+++ b/_includes/header.html
@@ -13,7 +13,7 @@
 <div class="off-canvas-wrapper-inner" data-off-canvas-wrapper>
 <header>
     <div class="infoBar">
-    <h1><a href="{{site.url}}">Bible Baptist Church <span>Mattoon, IL</span></a></h1>
+    <h1><a href="{{site.url}}"  style="background: url({{site.data.info[0].Church_Logo[0].url}}) no-repeat center center;">Bible Baptist Church <span>Mattoon, IL</span></a></h1>
     <div class="service-times">
             {% include service-schedule.html %}
     </div><!--/service-times-->
